Improvements to 'Featured Content'

--- a/featured-content-slider/featured-content-slider.html
+++ b/featured-content-slider/featured-content-slider.html
@@ -6,20 +6,33 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="./featured-content-slider.css">
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
   <div class="slideshow js-slideshow">
-    <div class="slide">One</div>
+    <div class="slide">
+      <div class="content-container">
+        <div class="content-col-image">
+          <img src="images/1.webp" />
+        </div>
+        <div class="content-col-text">
+          <div class="hero__content">
+            <span class="dm-sans" style="letter-spacing: 5px; font-size: 14px; margin-bottom: 20px; display: inline-block;">NEW</span>
+            <h2 class="cormorant" style="font-size: 60px; max-width: 60%;">Welcome to the Comfort Club</h2>
+            <p class="dm-sans" style="margin: 20px 0; line-height: 1.5; width: 60%; font-size: 18px;">Our expert sessions make it easy to find comfort in relaxation, movement, &amp; human connection in just a few minutes.</p>
+            <a href="/blogs/comfort-club" class="cta dm-sans">Come On In</a>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="slide">Two</div>
     <div class="slide">Three</div>
     <div class="slide">Four</div>
-    <div class="slide">Five</div>
-    <div class="slide">Six</div>
-    <div class="slide">Seven</div>
-    <div class="slide">Eight</div>
-    <div class="slide">Nine</div>
-    <div class="slide">Ten</div>
   </div>
 
     <!-- Swiper JS -->
