New section based on Swiper

--- a/featured-content-slider/featured-content-slider.html
+++ b/featured-content-slider/featured-content-slider.html
@@ -23,16 +23,58 @@
         <div class="content-col-text">
           <div class="hero__content">
             <span class="dm-sans" style="letter-spacing: 5px; font-size: 14px; margin-bottom: 20px; display: inline-block;">NEW</span>
-            <h2 class="cormorant" style="font-size: 60px; max-width: 60%;">Welcome to the Comfort Club</h2>
-            <p class="dm-sans" style="margin: 20px 0; line-height: 1.5; width: 60%; font-size: 18px;">Our expert sessions make it easy to find comfort in relaxation, movement, &amp; human connection in just a few minutes.</p>
+            <h2 class="cormorant" style="font-size: 60px;">Welcome to the Comfort Club</h2>
+            <p class="dm-sans" style="margin: 20px 0; line-height: 1.5; font-size: 18px;">Our expert sessions make it easy to find comfort in relaxation, movement, &amp; human connection in just a few minutes.</p>
             <a href="/blogs/comfort-club" class="cta dm-sans">Come On In</a>
           </div>
         </div>
       </div>
     </div>
-    <div class="slide">Two</div>
-    <div class="slide">Three</div>
-    <div class="slide">Four</div>
+    <div class="slide">
+      <div class="content-container">
+        <div class="content-col-image">
+          <img src="images/2.gif" />
+        </div>
+        <div class="content-col-text">
+          <div class="hero__content">
+            <span class="dm-sans" style="letter-spacing: 5px; font-size: 14px; margin-bottom: 20px; display: inline-block;">NEW</span>
+            <h2 class="cormorant" style="font-size: 60px;">Welcome to the Comfort Club</h2>
+            <p class="dm-sans" style="margin: 20px 0; line-height: 1.5; font-size: 18px;">Our expert sessions make it easy to find comfort in relaxation, movement, &amp; human connection in just a few minutes.</p>
+            <a href="/blogs/comfort-club" class="cta dm-sans">Come On In</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="slide">
+      <div class="content-container">
+        <div class="content-col-image">
+          <img src="images/1.webp" />
+        </div>
+        <div class="content-col-text">
+          <div class="hero__content">
+            <span class="dm-sans" style="letter-spacing: 5px; font-size: 14px; margin-bottom: 20px; display: inline-block;">NEW</span>
+            <h2 class="cormorant" style="font-size: 60px; max-width: 80%;">Welcome to the Comfort Club</h2>
+            <p class="dm-sans" style="margin: 20px 0; line-height: 1.5; width: 80%; font-size: 18px;">Our expert sessions make it easy to find comfort in relaxation, movement, &amp; human connection in just a few minutes.</p>
+            <a href="/blogs/comfort-club" class="cta dm-sans">Come On In</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="slide">
+      <div class="content-container">
+        <div class="content-col-image">
+          <img src="images/1.webp" />
+        </div>
+        <div class="content-col-text">
+          <div class="hero__content">
+            <span class="dm-sans" style="letter-spacing: 5px; font-size: 14px; margin-bottom: 20px; display: inline-block;">NEW</span>
+            <h2 class="cormorant" style="font-size: 60px; max-width: 80%;">Welcome to the Comfort Club</h2>
+            <p class="dm-sans" style="margin: 20px 0; line-height: 1.5; width: 80%; font-size: 18px;">Our expert sessions make it easy to find comfort in relaxation, movement, &amp; human connection in just a few minutes.</p>
+            <a href="/blogs/comfort-club" class="cta dm-sans">Come On In</a>
+          </div>
+        </div>
+      </div>
+    </div>    
   </div>
 
     <!-- Swiper JS -->
